Replacing activities with fragments to support retention of tabs: ToDo : Change raaga and deity to display fragments: Change error activities to fragments:

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:name=".MainActivity1">
         </activity>  
         <activity
-            android:name="com.bhajans.display.DisplayBhajanDetails">
+            android:name="com.bhajans.display.ODisplayBhajanDetails">
         </activity>
         <activity
             android:name="com.bhajans.display.ErrorDisplayActivity">
