Added fragments for deity and raaga results : TODO cleanup logic where bundle getstring is used

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".BhajanResultsActivity">
+            android:name=".BhajanResultsFragment">
         </activity>  
         <activity
             android:name=".MainActivity1">
