--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bhajans"
+    package="com.sankeerthan"
     android:versionCode="1"
     android:versionName="1.0" >
     
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.sankeerthan.MainActivity"
             android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,16 +23,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".BhajanResultsFragment">
+            android:name="com.sankeerthan.BhajanResultsFragment">
         </activity>  
         <activity
-            android:name=".MainActivity1">
+            android:name="com.sankeerthan.MainActivity1">
         </activity>  
         <activity
-            android:name="com.bhajans.display.ODisplayBhajanDetails">
+            android:name="com.sankeerthan.display.ODisplayBhajanDetails">
         </activity>
         <activity
-            android:name="com.bhajans.display.OErrorDisplayActivity">
+            android:name="com.sankeerthan.display.OErrorDisplayActivity">
         </activity>   
         <activity
             android:name="com.bhajans.playback.PlaybackActivity">
