--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.sankeerthan.MainActivity"
+            android:name="com.sankeerthan.IntroFlashActivity"
             android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,10 +23,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.sankeerthan.BhajanResultsFragment">
+            android:name="com.sankeerthan.search.display.BhajanResultsFragment">
         </activity>  
         <activity
-            android:name="com.sankeerthan.MainActivity1">
+            android:name="com.sankeerthan.MainActivity">
         </activity>  
         <activity
             android:name="com.sankeerthan.display.ODisplayBhajanDetails">
