--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,9 +10,8 @@
      <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" 
-        android:theme="@style/AppTheme" >
+       android:theme="@style/AppTheme" 
+       android:label="@string/app_name" >
         <activity
             android:name="com.sankeerthan.IntroFlashActivity"
             android:label="@string/title_activity_main" >
