--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,8 +8,11 @@
         android:targetSdkVersion="17" />
     
      <uses-permission android:name="android.permission.INTERNET" />
-
-    <application
+     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+     
+    
+     
+     <application
        android:theme="@style/AppTheme" 
        android:label="@string/app_name" >
         <activity
@@ -23,5 +26,9 @@
         <activity
             android:name="com.sankeerthan.MainActivity">
         </activity>  
+          <activity android:name="com.google.android.gms.ads.AdActivity"
+             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+           <meta-data android:name="com.google.android.gms.version"
+               android:value="@integer/google_play_services_version"/>
     </application>
 </manifest>
