--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,7 @@
     
      
      <application
+       android:icon="@drawable/ic_launcher"
        android:theme="@style/AppTheme" 
        android:label="@string/app_name" >
         <activity
