--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -8,11 +8,14 @@
         android:targetSdkVersion="17" />
     
      <uses-permission android:name="android.permission.INTERNET" />
-
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" 
-        android:theme="@style/AppTheme" >
+     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+     
+    
+     
+     <application
+       android:icon="@drawable/ic_launcher"
+       android:theme="@style/AppTheme" 
+       android:label="@string/app_name" >
         <activity
             android:name="com.sankeerthan.IntroFlashActivity"
             android:label="@string/title_activity_main" >
@@ -24,5 +27,9 @@
         <activity
             android:name="com.sankeerthan.MainActivity">
         </activity>  
+          <activity android:name="com.google.android.gms.ads.AdActivity"
+             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+           <meta-data android:name="com.google.android.gms.version"
+               android:value="@integer/google_play_services_version"/>
     </application>
 </manifest>
